# savon

./: .gitignore  Cargo.toml
examples/: cli.rs
savon/: Cargo.toml
savon-cli/: Cargo.toml
savon-cli/src/: main.rs
savon-derive/: Cargo.toml
savon-derive/src/: lib.rs
savon-test/: Cargo.toml  build.rs
savon/src/: error.rs  gen.rs  http.rs  lib.rs  string.rs  wsdl.rs
savon/src/rpser/: mod.rs  xml.rs
src/: gen.rs  wsdl.rs
xtask/: Cargo.toml
xtask/src/: main.rs
