[package]
name = "savon-cli"
version = "0.1.0"
authors = ["Geoffroy Couprie <contact@geoffroycouprie.com>"]
edition = "2021"
description = "reserved"
license = "MIT OR Apache-2.0"
repository = "https://github.com/netwo-io/savon"
readme = "../README.md"
documentation = "https://docs.rs/savon"
keywords = ["soap"]

[dependencies]
savon = { path = "../savon" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
prettyplease = "0.2"
syn = "2.0"
