[package]
name = "savon-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
savon = { path = "../savon" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
prettyplease = "0.2"
syn = "2.0"
