[package]
name = "savon-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
documentation.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2.0.72"
proc-macro-crate = "3.1.0"
proc-macro2 = "1.0.86"
darling = "0.20.10"
quote = "1.0.36"
