[package]
name = "savon-test"
version = "0.1.0"
authors = ["Geoffroy Couprie <contact@geoffroycouprie.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
savon = { path = "../savon" }
tokio = { version = "1.33", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.5"

[build-dependencies]
savon = { path = "../savon" }
