[package]
name = "savon-test"
build = "build.rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
savon = { path = "../savon" }
tokio = { version = "1.33", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.5"

[build-dependencies]
savon = { path = "../savon" }
