[package]
name = "savon"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
log = "0.4"
xmltree = "0.10"
chrono = "0.4"
quote = "1.0"
proc-macro2 = "1.0"
case = "^1.0"
reqwest = "0.11"
thiserror = "1.0"
prettyplease = "0.2"
syn = "2.0"

[dev-dependencies]
anyhow = "1.0"
env_logger = "0.10"
